fix(dh): backend for request connection state change

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -1115,7 +1115,8 @@
       "connectionStateLabel": "Tilslutningsstatus",
       "validityDate": "Gyldighedsdato",
       "cancel": "Annuller",
-      "save": "Gem ændringer"
+      "save": "Gem ændringer",
+      "saveSuccess": "Tilslutningsstatus opdateres"
     }
   },
   "messageArchive": {
