--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1114,7 +1114,8 @@
       "connectionStateLabel": "Connection status",
       "validityDate": "Validity date",
       "cancel": "Cancel",
-      "save": "Save changes"
+      "save": "Save changes",
+      "saveSuccess": "Connection status is being updated"
     }
   },
   "messageArchive": {
