chore: adds translation

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -621,7 +621,8 @@
         "actionsButton": "Handlinger",
         "upload": "Upload måledata",
         "moveIn": "Tilflyt kunde",
-        "createChargeLink": "Tilknyt pris"
+        "createChargeLink": "Tilknyt pris",
+        "updateCustomerData": "Opdater kundestamdata"
       },
       "details": {
         "address": "{{ meteringPoint.overview.shared.address }}",
