chore: readds missing translation

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1856,6 +1856,7 @@
       "ItSupplier": "IT supplier"
     },
     "gridAreas": {
+      "topBarTitle": "Grid Areas",
       "noGridAreas": "No grid areas found",
       "error": "An error occurred",
       "searchLabel": "Search",
