--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -1856,6 +1856,7 @@
       "ItSupplier": "IT-leverandør"
     },
     "gridAreas": {
+      "topBarTitle": "Netområder",
       "noGridAreas": "Ingen netområder fundet",
       "error": "En fejl opstod",
       "searchLabel": "Søg",
