feat(dh, metering-points): add sorting for process-overview (#5065)
Co-authored-by: Alexander Hafstad <alexander@hafstad.dk>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -822,7 +822,7 @@
     },
     "processOverview": {
       "columns": {
-        "createdAt": "Beskedtidspunkt",
+        "createdAt": "Registreret i DataHub",
         "reasonCode": "Type",
         "state": "Status",
         "cutoffDate": "Skæringsdato",
@@ -852,7 +852,7 @@
       },
       "details": {
         "list": {
-          "createdAt": "Beskedtidspunkt",
+          "createdAt": "Registreret i DataHub",
           "cutoff": "Skæringsdato",
           "reasonCode": "Årsagskode",
           "initiator": "Initierende aktør"
