--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -822,7 +822,7 @@
     },
     "processOverview": {
       "columns": {
-        "createdAt": "Time of message",
+        "createdAt": "Registered in DataHub",
         "reasonCode": "Type",
         "state": "State",
         "cutoffDate": "Cut-off date",
@@ -852,7 +852,7 @@
       },
       "details": {
         "list": {
-          "createdAt": "Time of message",
+          "createdAt": "Registered in DataHub",
           "cutoff": "Cut-off date",
           "reasonCode": "Reason code",
           "initiator": "Initiating participant"
