--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -851,6 +851,8 @@
         "UNKNOWN": "Unknown Step"
       },
       "details": {
+        "notFound": "Process not found",
+        "noSteps": "No steps available for this process",
         "list": {
           "createdAt": "Registered in DataHub",
           "cutoff": "Cut-off date",
