Feature/process overview adjustments (#5069)
Co-authored-by: Alexander Hafstad <alexander@hafstad.dk>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -829,8 +829,11 @@
         "initiator": "Initiating participant",
         "actions": "Possible actions"
       },
-      "reasonCode": {
+      "processType": {
         "EndOfSupply": "End of supply (BRS-002)"
+      },
+      "reasonCode": {
+        "EndOfSupply": "E20"
       },
       "filters": {
         "created": "Time",
@@ -851,6 +854,8 @@
         "UNKNOWN": "Unknown Step"
       },
       "details": {
+        "notFound": "Process not found",
+        "noSteps": "No steps available for this process",
         "list": {
           "createdAt": "Registered in DataHub",
           "cutoff": "Cut-off date",
