--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -870,10 +870,14 @@
         "actions": "Mulige handlinger"
       },
       "processType": {
-        "EndOfSupply": "Leveranceophør (BRS-002)"
+        "EndOfSupply": "Leveranceophør (BRS-002)",
+        "NewMeteringPoint": "Oprettelse af målepunkt (BRS-004)",
+        "ConnectMeteringPoint": "Tilslutning af nyoprettet målepunkt (BRS-008)"
       },
       "reasonCode": {
-        "EndOfSupply": "E20"
+        "EndOfSupply": "E20",
+        "NewMeteringPoint": "E02",
+        "ConnectMeteringPoint": "D15"
       },
       "filters": {
         "created": "Tidspunkt",
@@ -891,6 +895,9 @@
         "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_2": "Godkend anmod om leveranceophør (RSM-005)",
         "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_3": "Afvis anmod om leveranceophør (RSM-005)",
         "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_4": "Anmodning om afbrydelse (RSM-020)",
+        "BRS_004_CREATEMETERINGPOINT_V1_STEP_1": "Anmodning om oprettelse af målepunkt (RSM-021)",
+        "BRS_004_CREATEMETERINGPOINT_V1_STEP_2": "Godkendelse af oprettelse af målepunkt (RSM-021)",
+        "BRS_004_CREATEMETERINGPOINT_V1_STEP_3": "Afvisning af oprettelse af målepunkt (RSM-021)",
         "UNKNOWN": "Ukendt trin"
       },
       "details": {
