--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -382,9 +382,9 @@
       "MONTHLY": "Month",
       "UNKNOWN": "Unknown"
     },
-    "vatClassifications": {
-      "NO_VAT": "Without VAT",
-      "VAT25": "With VAT"
+    "vatInclusive": {
+      "false": "Without VAT",
+      "true": "With VAT"
     },
     "charges": {
       "topBarTitle": "Prices",
