chore: changes types to better fit the grouping

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -1079,6 +1079,7 @@
       "moveInSuccess": "Tilflytningen er nu registreret",
       "moveInFail": "Tilflytningen fejlede",
       "customerDataSuccess": "Kundestamdata opdatering er nu registreret",
+      "customerDataFail": "Kundestamdata opdatering fejlede",
       "save": "Tilflyt kunde",
       "cancel": "Annuller"
     },
