chore: adds customer 1 and 2 subtitles

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -1015,12 +1015,10 @@
         "customerInformation": "Kundeoplysninger",
         "private": "Privat",
         "business": "Erhverv",
+        "customer1": "Kunde 1",
+        "customer2": "Kunde 2",
         "name": "Kundenavn",
         "cpr": "CPR",
-        "name1": "Kundenavn 1",
-        "cpr1": "CPR 1",
-        "name2": "Kundenavn 2",
-        "cpr2": "CPR 2",
         "companyName": "Navn",
         "cvr": "CVR",
         "foreignCompany": "Udenlandsk virksomhed",
