--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1014,14 +1014,12 @@
         "customerInformation": "Customer information",
         "private": "Private",
         "business": "Business",
+        "customer1": "Customer 1",
+        "customer2": "Customer 2",
         "name": "Customer name",
         "cpr": "CPR",
-        "name1": "Customer name 1",
-        "cpr1": "CPR 1",
-        "name2": "Customer name 2",
-        "cpr2": "CPR 2",
         "companyName": "Company name",
-        "cvr": "CVR 1",
+        "cvr": "CVR",
         "foreignCompany": "Foreign company",
         "protectedAddress": "{{ meteringPoint.overview.shared.protectedAddress }}",
         "cprError": {
