Add tranlation to search field in charges

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -389,6 +389,7 @@
     "charges": {
       "topBarTitle": "Priser",
       "table": {
+        "searchById": "Søg på ID",
         "createButton": "Ny pris",
         "columns": {
           "code": "ID",
