--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -389,6 +389,7 @@
     "charges": {
       "topBarTitle": "Prices",
       "table": {
+        "searchById": "Search by ID",
         "createButton": "New charge",
         "columns": {
           "code": "ID",
